--- a/templates/base/nav-bar.html.twig
+++ b/templates/base/nav-bar.html.twig
@@ -19,6 +19,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">A propos</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="" >Portefolio</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Catégorie</a>
           <div class="dropdown-menu">
