--- a/templates/home/actualité.html.twig
+++ b/templates/home/actualité.html.twig
@@ -1,43 +1,23 @@
-<section>
-    <div class="container-fluid p-3">
-    <h2>Les dernière actualités</h2>
+<section class="pt-8 pt-md-11">
+    <div class="container p-3">
         <div class="row">
-            <div class="col-3 col-lg-4 d-flex">
-                <div class="card" style="width: 18rem;">
+            <div class="col-12">
+            <h2 class="mb-0">
+                Les dernière actualités 
+            </h2>
+        </div>
+        <div class="row">
+            {% for blogpost in blogposts %}
+            <div class="col-4">
+                <div class="card p-3" style="width: 18rem;">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">{{blogpost.titre}}</h5>
+                        <p class="card-text">{{blogpost.contenu|u.truncate(150, '...', false)}}</p>
+                        <p>Ecrit le : {{blogpost.date|date('d/m/Y')}}</p>
                     </div>
                 </div>
             </div>
-            <div class="col-3 col-lg-4 d-flex">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3 col-lg-4 d-flex">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3 col-lg-4 d-flex">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </section>
