--- a/templates/home/welcome.html.twig
+++ b/templates/home/welcome.html.twig
@@ -1,5 +1,5 @@
-<section>
-    <div class="container-fluid p-3">
+<section class="pt-8 pt-md-11">
+    <div class="container p-3">
         <div class="row">
             <div class="col-6 col-lg-6">
                 <img class="img-fluid" src="/img/placeholder.jpeg" alt="">
