--- a/templates/base/nav-bar.html.twig
+++ b/templates/base/nav-bar.html.twig
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <img src="/img/paint.png" alt="Le peintre des vosges">
-    <a class="navbar-brand" href="#">Le Peintre Des Vosges</a>
+    <a class="navbar-brand" href="{{path ("home")}}">Le Peintre Des Vosges</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,10 +11,10 @@
         <li class="nav-item">
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="">Réalisation</a>
+            <a class="nav-link" href="{{path ("réalisations")}}">Réalisation</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Actualité</a>
+          <a class="nav-link" href="{{path ("blogpost")}}">Actualité</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">A propos</a>
