--- a/templates/blogpost/actualités.html.twig
+++ b/templates/blogpost/actualités.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BlogpostController!{% endblock %}
+{% block title %}Actualité{% endblock %}
 
 {% block body %}
 
