Creation de la page a_propos

--- a/templates/base/nav-bar.html.twig
+++ b/templates/base/nav-bar.html.twig
@@ -11,19 +11,16 @@
         <li class="nav-item">
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{{path ("réalisations")}}">Réalisation</a>
+            <a class="nav-link" href="{{path ("réalisations") }}">Réalisation</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{path ("blogpost")}}">Actualité</a>
+          <a class="nav-link" href="{{path ("blogpost") }}">Actualité</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">A propos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="" >Portefolio</a>
+          <a class="nav-link" href="{{path ("a_propos") }}">A propos</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Catégorie</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Portefolio</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="#">Catégorie 1</a>
             <a class="dropdown-item" href="#">Catégorie 2</a>
