--- a/templates/base/footer.html.twig
+++ b/templates/base/footer.html.twig
@@ -32,13 +32,13 @@
             Lien Utile
           </h6>
           <p>
-            <a href="#!" class="text-reset">Acceuil</a>
+            <a href="{{ path ("home") }}" class="text-reset">Acceuil</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Actualité</a>
+            <a href="{{ path ("blogpost")}}" class="text-reset">Actualité</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">A propos</a>
+            <a href="{{ path ("a_propos") }}" class="text-reset">A propos</a>
           </p>
           <p>
             <a href="#!" class="text-reset">Catégorie</a>
