--- a/templates/blogpost/actualités.html.twig
+++ b/templates/blogpost/actualités.html.twig
@@ -7,7 +7,7 @@
     <section class="pt-8 pt-md-11">
     <div class="container p-3">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 col-md-7">
             <h2 class="mb-0">
                 Les dernière réalisations
             </h2>
