Creation du portefolio

--- a/templates/base/footer.html.twig
+++ b/templates/base/footer.html.twig
@@ -41,7 +41,7 @@
             <a href="{{ path ("a_propos") }}" class="text-reset">A propos</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Catégorie</a>
+            <a href="{{ path ("portefolio") }}" class="text-reset">Catégorie</a>
           </p>
         </div>
         <!-- Grid column -->
