--- a/templates/home/welcome.html.twig
+++ b/templates/home/welcome.html.twig
@@ -10,7 +10,7 @@
                     Artiste peintre basée sur Gérardmer, au coeurs de la forêt Vosgienne, je créer mes toile en rapport avec la nature qui m'entoure. 
                     Tout mes toile sont livrée avec un certificat d'authenticité et un numéro pour les éditions limités. Une pertie des ventes ira à des assciations permettant au personne une insertion professionnel par l'art.
                 </p>
-                <a href="" class="btn btn-secondary">Voir mon Portefolio</a>
+                <a href="{{path ("portefolio")}}" class="btn btn-secondary">Voir mon Portefolio</a>
             </div>
         </div>
     </div>
