Ajout d'une page pour connaitre le détail d'une oeuvre

--- a/templates/peinture/realisations.html.twig
+++ b/templates/peinture/realisations.html.twig
@@ -16,7 +16,9 @@
             {% for peinture in peintures %}
             <div class="col-4">
                 <div class="card mb-3" style="width: 18rem;">
+                    <a href="{{path ('realisation_detail', {"slug": peinture.slug}) }}" class="card-img-top">
                     <img src="{{peinture.file}}" class="card-img-top" alt="...">
+                    </a>
                     <div class="card-body">
                         <h5 class="card-title">{{peinture.nom}}</h5>
                         <p class="card-text">{{peinture.description|u.truncate(150,'...',false)}}</p>
