ajout du lien dans la navbar

--- a/templates/base/nav-bar.html.twig
+++ b/templates/base/nav-bar.html.twig
@@ -28,7 +28,7 @@
         </li>
       </ul>
       <li class="d-flex">
-        <a class="nav-link btn btn-secondary" href="">Me contacter</a>
+        <a class="nav-link btn btn-secondary" href="{{ path ("contact") }}">Me contacter</a>
       </li>
     </div>
   </div>
