--- a/templates/home/realisation.html.twig
+++ b/templates/home/realisation.html.twig
@@ -11,7 +11,7 @@
             <div class="col-4">
                 <div class="card p-3" style="width: 18rem;">
                     <a href="{{path ('realisation_detail', {'slug':peinture.slug}) }}">
-                    <img src="{{peinture.file}}" class="card-img-top" alt="...">
+                    <img src="{{vich_uploader_asset(peinture, 'imageFile')}}" class="card-img-top" alt="...">
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">{{peinture.nom}}</h5>
