--- a/templates/peinture/detail.html.twig
+++ b/templates/peinture/detail.html.twig
@@ -45,7 +45,7 @@
                 </ul>
             </aside>
             <div class="col-6">
-                <img class="img-fluid" src=" {{peinture.file}}" alt="">
+                <img class="img-fluid" src=" {{vich_uploader_asset(peinture, 'imageFile')}}" alt="">
             </div>
         </div>
     </div>
